--- a/index.html
+++ b/index.html
@@ -49,19 +49,19 @@
         <div class="top-banner__content">
           <p class="top-banner__title bold">
             <!-- 띄어쓰기 포함 최대17자 -->
-            프론트엔드를 대표하는
+            괜찮다 괜찮다 말해도 
             <br />
             <!-- 띄어쓰기 포함 최대17자 -->
-            라이브러리, 리액트.
+            그렇지 않다는 걸 알기에
           </p>
           <p class="top-banner__subtitle regular">
             <!-- 띄어쓰기 포함 27자 -->
-            리액트 스쿨과 함께라면
+            마이케어와 함께라면
           </p>
           <a href="https://projectlion.io/">
             <div class="top-banner__cta-button center bold">
               <!-- 띄어쓰기 포함 16자 -->
-              스쿨 신청 상담받기
+              무료 상담받기
             </div>
           </a>
         </div>
@@ -76,7 +76,7 @@
         <div class="section-title">
           <h2 class="section-title__main center bold">Services</h2>
           <h3 class="section-title__sub center bold"
-            >지금 리액트스쿨과 함께 리액트를 배워야하는 이유!</h3
+            >낯설어진 일상에서 힘 겨워 마냥 울고 싶어질때!</h3
           >
         </div>
         <div class="grid-3fr">
@@ -88,14 +88,14 @@
             />
             <p class="card__title center bold">
               <!-- 최대 길이 17자 -->
-              리엑트</p
+              커뮤니티</p
             >
             <p class="card__subtitle center regular">
               <!-- 최대 길이 22자 -->
-              개발자들이 가장 많이 배우고 싶어하는
+              속 터놓을 곳 없어 답답한 마음
               <br />
               <!-- 최대 길이 22자 -->
-              웹 프론트엔드 라이브러리입니다.
+              비슷한 경험을 가진 사람들과 나눠요
             </p>
           </div>
           <div class="card__">
@@ -106,16 +106,16 @@
             />
             <p class="card__title center bold"
               ><!-- 최대 길이 17자 -->
-              대기업에서 더 많이 찾는 개발자</p
+              알림장</p
             >
             <p class="card__subtitle center regular">
               <!-- 최대 길이 22자 -->
-              리액트는 규모가 큰 서비스 어플리케이션에도
+              오늘 밥은 먹었나, 약은 먹었나
               <br />
               <!-- 최대 길이 22자 -->
-              높은 안정성과 성능을 발휘합니다.
+              옆에 있어도 옆에 있는 것처럼 
               <!-- 최대 길이 22자 -->
-              <br />많은 대기업에서 리액트 개발자를 찾습니다.</p
+              <br />알림장으로 알려드려요</p
             >
           </div>
           <div class="card__">
@@ -126,15 +126,15 @@
             />
             <p class="card__title center bold center">
               <!-- 최대 길이 17자 -->
-              완벽하게 준비된 커리큘럼
+              사회서비스 추천
             </p>
             <p class="card__subtitle center regular">
               <!-- 최대 길이 22자 -->
-              리액트 스쿨이 준비한 <br />
+              일상에서 작은 위안이 될 수 있게 <br />
               <!-- 최대 길이 22자 -->
-              쌍방향 커리큘럼을 통해서<br />
+              필요한 복지서비스를 함께 알려드릴게요<br />
               <!-- 최대 길이 22자 -->
-              빠른 습득을 보장합니다.</p
+              </p
             >
           </div>
         </div>
@@ -150,7 +150,7 @@
         <div class="section-title">
           <h2 class="section-title__main center bold">Product</h2>
           <h3 class="section-title__sub center bold"
-            >리액트 스쿨의 교육 플랜들</h3
+            >마이케어로 보호자와 기관이 함께해요</h3
           >
         </div>
         <div class="grid-3fr">
@@ -162,16 +162,15 @@
             />
             <p class="card__title bold">
               <!-- 최대 길이 17자 -->
-              라이트 플랜</p
+              환자와 보호자는</p
             >
             <p class="card__subtitle regular">
               <!-- 최대 길이 22자 -->
-              자신만의 페이스에 맞춰 학습하고 싶은 분들께 <br />
+              알림장 기록을 모아 환자상태를 한눈에<br />
               <!-- 최대 길이 22자 -->
-              추천합니다. 자기만의 수강계획으로 학습합니다.</p
+              가족 모두가 공유할 수 있어요</p
             >
-            <div class="card__tag"> 자기주도학습 </div>
-          </div>
+           </div>
           <div class="card__">
             <!-- 카드 두번째 이미지 -->
             <img
@@ -180,104 +179,25 @@
             />
             <p class="card__title bold">
               <!-- 최대 길이 17자 -->
-              베이직 플랜
+              기관에서는
             </p>
             <p class="card__subtitle regular">
               <!-- 최대 길이 22자 -->
-              학습 매니저 주도 일정 아래 꾸준하게 학습하고
+              체크기능으로 환자에게 필요한 부분을 확인하고
               <br />
               <!-- 최대 길이 22자 -->
-              싶은 분들을 위한 코스입니다.
+              보호자와 편하게 소통할 수 있어요
             </p>
-            <div class="card__tag">
-              <!-- 길이 자유 -->
-              일정을꼼꼼히
-            </div>
+            
           </div>
-          <div class="card__">
-            <!-- 카드 세번째 이미지 -->
-            <img
-              class="card__image"
-              src="./statics/images/product/img_3rd.png"
-            />
-            <p class="card__title bold">
-              <!-- 최대 길이 17자 -->
-              플러스 플랜</p
-            >
-            <p class="card__subtitle regular"
-              >무조건 완강을 위한 집중케어 코스입니다. 전담 매
-              <!-- 최대 길이 22자 -->
-              <br />
-              <!-- 최대 길이 22자 -->
-              니저 분이 꼼꼼하게 밀착케어해드립니다.
-            </p>
-            <div class="card__tag"> 밀착케어코스 </div>
-          </div>
-        </div>
+                  </div>
       </section>
-      <!-- teams -->
-      <section id="team-section" class="container">
-        <div class="section-title">
-          <h2 class="section-title__main center bold">Team</h2>
-          <h3 class="section-title__sub center bold"
-            >리액트 스쿨의 핵심 강사진</h3
-          >
-        </div>
-        <div class="grid-4fr">
-          <div class="card__">
-            <!-- 카드 첫번째 이미지  -->
-            <img class="card__image" src="./statics/images/team/img_1st.png" />
-            <p class="card__title center bold">
-              <!-- 최대 13자 -->
-              강사명</p
-            >
-            <p class="card__subtitle center regular">
-              <!-- 최대 16자 -->
-              강사타이틀</p
-            >
-          </div>
-          <div class="card__">
-            <img class="card__image" src="./statics/images/team/img_2nd.png" />
-            <p class="card__title center bold">
-              <!-- 최대 13자 -->
-              강사명</p
-            >
-            <p class="card__subtitle center regular">
-              <!-- 최대 16자 -->
-              강사타이틀</p
-            >
-          </div>
-          <div class="card__">
-            <!-- 카드 두번째 이미지  -->
-            <img class="card__image" src="./statics/images/team/img_3rd.png" />
-            <p class="card__title center bold">
-              <!-- 최대 13자 -->
-              강사명</p
-            >
-            <p class="card__subtitle center regular">
-              <!-- 최대 16자 -->
-              강사타이틀</p
-            >
-          </div>
-          <div class="card__">
-            <!-- 카드 세번째 이미지  -->
-            <img class="card__image" src="./statics/images/team/img_4th.png" />
-            <p class="card__title center bold">
-              <!-- 최대 13자 -->
-              강사명</p
-            >
-            <p class="card__subtitle center regular">
-              <!-- 최대 16자 -->
-              강사타이틀</p
-            >
-          </div>
-        </div>
-      </section>
+      
       <div class="container">
         <a class="cta-button__wrapper" href="https://projectlion.io/">
           <div class="cta-button center bold">
             <!-- 띄어쓰기 포함 16자 -->
-            스킬 신청 상담받기
+            무료 상담받기
           </div>
         </a>
       </div>
@@ -447,7 +367,7 @@
             환불규정
           </div>
           <div class="footer-text-wrapper semi-bold">
-            팀이름
+            highfive
             <!-- <img class="seperator-image" src="./statics/images/Seperator.png" /> -->
             <svg
               width="1"
@@ -459,7 +379,7 @@
             >
               <path d="M1 0H0V10H1V0Z" />
             </svg>
-            대표자 이름
+            송혜원
             <!-- <img class="seperator-image" src="./statics/images/Seperator.png" /> -->
             <svg
               width="1"
@@ -471,7 +391,7 @@
             >
               <path d="M1 0H0V10H1V0Z" />
             </svg>
-            대표이메일
+            noche1234@likelion.org
           </div>
         </div>
       </div>
