--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./styles/reset.css" />
     <link rel="stylesheet" href="./styles/index.css" />
     <!-- tab-title -->
-    <title>start up school landing page</title>
+    <title> 의료소비자 플랫폼 mycare </title>
     <script>
       function colorSvgIcons() {
         let colorIcon = getComputedStyle(
@@ -31,7 +31,8 @@
     <header>
       <div class="header__logo center">
         <!-- 로고 이미지 -->
-        <img src="./statics/images/logo/logo.png" />
+        <img class="test" src="./statics/images/logo/logo.png"  />
+        
       </div>
       <nav class="center">
         <!-- header-button -->
@@ -148,23 +149,23 @@
       <!-- productions -->
       <section id="product-section" class="container">
         <div class="section-title">
-          <h2 class="section-title__main center bold">Product</h2>
+          <h2 class="section-title__main center bold"> Product</h2>
           <h3 class="section-title__sub center bold"
             >마이케어로 보호자와 기관이 함께해요</h3
           >
         </div>
-        <div class="grid-3fr">
+        <div class="grid-5fr">
           <div class="card__">
             <!-- 카드 첫번째 이미지 -->
             <img
               class="card__image"
               src="./statics/images/product/img_1st.png"
             />
-            <p class="card__title bold">
+            <p class="card__title center bold">
               <!-- 최대 길이 17자 -->
               환자와 보호자는</p
             >
-            <p class="card__subtitle regular">
+            <p class="card__subtitle center regular">
               <!-- 최대 길이 22자 -->
               알림장 기록을 모아 환자상태를 한눈에<br />
               <!-- 최대 길이 22자 -->
@@ -177,11 +178,11 @@
               class="card__image"
               src="./statics/images/product/img_2nd.png"
             />
-            <p class="card__title bold">
+            <p class="card__title center bold">
               <!-- 최대 길이 17자 -->
               기관에서는
             </p>
-            <p class="card__subtitle regular">
+            <p class="card__subtitle center regular">
               <!-- 최대 길이 22자 -->
               체크기능으로 환자에게 필요한 부분을 확인하고
               <br />
@@ -207,7 +208,7 @@
         <div class="footer__top">
           <div class="footer__top__logo">
             <!-- 로고 이미지 -->
-            <img src="./statics/images/logo/logo.png" />
+            <img class="test" src="./statics/images/logo/logo.png" />
           </div>
           <div class="footer__top__info">
             <div class="footer__top__info__external-link">
