--- a/index.html
+++ b/index.html
@@ -100,10 +100,11 @@
               class="card__image"
               src="./statics/images/services/img_1st.png"
             />
-            <p class="card__title center bold">
+           <button class = "button_test" type="button"> <p class="card__title center bold">
               <!-- 최대 길이 17자 -->
               커뮤니티</p
             >
+          </button>
             <p class="card__subtitle center regular">
               <!-- 최대 길이 22자 -->
               속 터놓을 곳 없어 답답한 마음
