--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
               class="card__image"
               src="./statics/images/services/img_1st.png"
             />
-           <button class = "button_test" type="button"> <p class="card__title center bold">
+           <button class = "button_1" type="button"> <p class="card__title center bold">
               <!-- 최대 길이 17자 -->
               커뮤니티</p
             >
