--- a/index.html
+++ b/index.html
@@ -100,10 +100,9 @@
               class="card__image"
               src="./statics/images/services/img_1st.png"
             />
-           <button class = "button_1" type="button"> <p class="card__title center bold">
+           <button class = "button_1" type="button"> 
               <!-- 최대 길이 17자 -->
-              커뮤니티</p
-            >
+              <button type="button"> 커뮤니티 </button>
           </button>
             <p class="card__subtitle center regular">
               <!-- 최대 길이 22자 -->
