--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             />
            <button class = "button_1" type="button"> 
               <!-- 최대 길이 17자 -->
-              <button type="button"> 커뮤니티 </button>
+             커뮤니티 
           </button>
             <p class="card__subtitle center regular">
               <!-- 최대 길이 22자 -->
